css/nurd.less
/* ... */
/* remember to define focus styles! */
:focus { outline: 0; }
body { line-height: 1; color: black; background: white; }
ol, ul { list-style: none; }
/* tables still need 'cellspacing="0"' in the markup */
table { border-collapse: separate; border-spacing: 0; }
caption, th, td { text-align: left; font-weight: normal; }
blockquote:before, blockquote:after, q:before, q:after { content: ""; }
blockquote, q { quotes: "" ""; }
button { background: transparent; border: none; margin: 0; }
/* end reset CSS */

/* main.css */

body { background: rgb(191,234,244); font-family: arial;}
.background-container { }
.outer-container { margin: 0 auto; position: relative; }

@media screen and (min-device-width: 1024px) {
    .outer-container { width: 1024px; }
}
@media screen and (max-device-width: 1024px) {
    .outer-container { width: 100%; }
}

header { background: #2987E6; padding: 12px 0;  }
nav { background: #2987E6;
    div { .nav-gradient(); margin: 0 auto; text-align: center; }
    .how-to-play-btn { color: #394747; cursor: pointer; font-size: 1.2em; padding: 4px 8px;
        &:hover { color: #222; }
    }
    #restart-game-btn { color: #394747; cursor: pointer; font-size: 1.2em; padding: 4px 8px; position: relative;
        .waiting { color: #BFEAF4; display: none; font-size: 0.8em; left: -60px; padding: 3px 10px; position: absolute; top: 32px; width: 200%; }
        &:hover { color: #222; }
        &.selected { .blue-highlight();
            .waiting { display: block; }
        }
    }
}

@media screen and (min-device-width: 1024px) {
    nav div { width: 1024px; }
}
@media screen and (max-device-width: 1024px) {
    nav div { width: 100%; }
}

article { position: relative; }
footer { border-top: solid 1px #666; color: #666; font-weight: bold; padding: 12px; text-align: center;
    a { color: #2987E6; }
}

article {
    .share-widgets { position: absolute; top: 386px;
        .share-widget { margin-top: 8px; }
        .share-widget.twitter-share-button-container { margin-top: 15px; }
    }
}

h1 { text-align: center; }
#game-container { background: transparent url(/images/board.png) no-repeat center 69px; background-size: 516px 461px; min-height: 520px; overflow:auto; position: relative; }

#tmp { display: none; }

/* game controls */
.game-controls { margin-top: 10px; text-align: center; }

@media screen and (min-device-width: 481px) {
    #restart-game-btn:hover .button {
        .icon { display: none; }
        .help-text { display: block; }
    }
}


#draw-cards-btn { background: transparent; display: inline-block; padding: 0;
    .deck { background: #606D73; height: 80px; border-radius: 5px; display: block;
        .top-card { .button-gradient(); border-radius: 5px; display: block; height: 64px; width: 128px;
            .logo { background: transparent url(/images/logo.png) no-repeat center center; background-size: 110px; display: block; height: 64px; width: 128px; }
            .help-text { color: #394747; display: none; font-size: 24px; height: 64px; padding-top: 20px; width: 128px; }
        }
    }
    &.selected .deck .top-card { .blue-highlight(); }
    progress { margin-bottom: 4px; width: 128px; }
}

@media screen and (min-device-width: 481px) {
    #draw-cards-btn:hover .deck .top-card {
        .logo { display: none; }
        .help-text { display: block; }
    }
}

#end-game-btn.selected { .blue-highlight(); }

/* game elements */
.card-container .json { display:none; }
.card-container .card-img {display:none;}
/* ... */

